# exprdf

./: CMakeLists.txt  CMakePresets.json  README.md  example_view.cpp  test_dataframe.cc  test_pybind.py
bindings/: py_exprdf.cpp
include/exprdf/: UnitFormat.hpp  exprdf.hpp
include/exprdf/qt/: DataFrameModel.h  DataFrameView.h
src/qt/: DataFrameModel.cpp  DataFrameView.cpp
